[metadata]
name = AsyncGear
version = 4.6.4
author = Antas
description = Think about such scene, some object has different state or periods, well we call periods.Among these periods, there can't be any two that could be both the present period. The object could be in only one period. For example, a human can only be one period of baby, youth, adult, old man and dead..
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/monk-after-90s/AsyncGear
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
license = MIT
[options]
packages = find:
python_requires = >=3.7
install_requires =
    loguru==0.5.1
    ensureTaskCanceled==1.1